2004-01-26  Bruno Haible  <bruno@clisp.org>

	* config/ltmain.sh: Upgrade to libtool-1.5.2.
	2003-11-27  Bruno Haible  <bruno@clisp.org>
		* config/ltmain.sh: In the trampoline code, include string.h,
		ctype.h, and return 127. Fixes warnings on cygwin.
	2003-02-18  Bruno Haible  <bruno@clisp.org>
		* config/ltmain.sh (install): Use "ln -s -f" instead of
		"rm -f && ln -s" to make a symlink for a shared library. Take
		care of Solaris /bin/ln.
		Reported by Nelson H. F. Beebe <beebe@math.utah.edu>.
	2001-11-03  Bruno Haible  <bruno@clisp.org>
		* config/m4/ltmain.sh: chmod 777 the .libs directory, so that
		"make install" succeeds.
	* config/m4/libtool.m4: Upgrade to libtool-1.5.2.

2004-02-02  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Add glibc2.m4.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number to 0.14.1.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number to 0.14.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number to 0.14-pre1.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* config/config.guess, config/config.sub: Update to GNU version
	2004-01-05.

2003-12-12  Bruno Haible  <bruno@clisp.org>

	Assume automake-1.8.
	* Makefile.am (html): Remove rule.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* config/install-reloc: Compile also the allocsa.c file.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number to 0.13.1.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number to 0.13.

2003-11-27  Bruno Haible  <bruno@clisp.org>

	* config/ltmain.sh: In the trampoline code, include string.h, ctype.h,