@@ -1,3 +1,11 @@
+2004-02-21  Bruno Haible  <bruno@clisp.org>
+
+	* PACKAGING: Add FAQ.html.
+
+2004-01-26  Bruno Haible  <bruno@clisp.org>
+
+	* config/config.libpath: Upgrade to libtool-1.5.2.
+
 2004-01-26  Bruno Haible  <bruno@clisp.org>
 
 	* config/ltmain.sh: Upgrade to libtool-1.5.2.
